[gd_scene load_steps=9 format=3 uid="uid://c0ybyhigv6mvu"]

[ext_resource type="PackedScene" uid="uid://24gv2j0lmo3s" path="res://levels/test_level.tscn" id="1_dfh7l"]
[ext_resource type="Script" path="res://main.gd" id="1_jpakq"]
[ext_resource type="PackedScene" uid="uid://b672epg2ubmxy" path="res://player/player.tscn" id="2_hhpp5"]
[ext_resource type="Script" path="res://hud/cooldown_bar.gd" id="4_2h60h"]
[ext_resource type="PackedScene" uid="uid://bbtchm7j8lb2p" path="res://hud/hud_frame.tscn" id="4_bhodp"]
[ext_resource type="AudioStream" uid="uid://mof06q1o4ruq" path="res://indian_trap.mp3" id="4_tkt0j"]
[ext_resource type="PackedScene" uid="uid://b7pfg81i3uyda" path="res://mobs/boar.tscn" id="5_8mvua"]
[ext_resource type="PackedScene" uid="uid://oeu7agf4wd1o" path="res://hud/cooldown_bar.tscn" id="5_w8d83"]

[node name="Main" type="Node"]
script = ExtResource("1_jpakq")

[node name="TestLevel" parent="." instance=ExtResource("1_dfh7l")]

[node name="Player" parent="." instance=ExtResource("2_hhpp5")]
position = Vector2(124, 171)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(124, 171)
zoom = Vector2(2, 2)
script = ExtResource("4_2h60h")
metadata/_edit_lock_ = true

[node name="CooldownBar" parent="Camera2D" instance=ExtResource("5_w8d83")]
position = Vector2(-273, -125)

[node name="HealthBar" parent="Camera2D" instance=ExtResource("4_bhodp")]
position = Vector2(-285, -157)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_tkt0j")

[node name="Boar" parent="." instance=ExtResource("5_8mvua")]
z_index = 1
position = Vector2(343, 109)

[node name="Boar2" parent="." instance=ExtResource("5_8mvua")]
position = Vector2(512, 81)

[node name="Boar3" parent="." instance=ExtResource("5_8mvua")]
position = Vector2(665, 78)

[node name="Boar4" parent="." instance=ExtResource("5_8mvua")]
position = Vector2(804, 313)

[node name="Boar5" parent="." instance=ExtResource("5_8mvua")]
position = Vector2(1130, 97)

[node name="Boar6" parent="." instance=ExtResource("5_8mvua")]
position = Vector2(1341, 532)

[connection signal="GotHit" from="Player" to="." method="_on_player_got_hit"]
[connection signal="HudSignal" from="Player" to="." method="_on_player_hud_signal"]
